Fixes alignment of navigation and logo on desktop

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,9 +14,9 @@
 // -------------------
 
 .header-navigation {
-	-webkit-flex: 1 1 auto;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
+	-webkit-flex: 1 1 60%;
+    -ms-flex: 1 1 60%;
+    flex: 1 1 60%;
 }
 
 
