--- a/less/theme.less
+++ b/less/theme.less
@@ -87,6 +87,10 @@ body { -webkit-font-smoothing: antialiased; }
 	float: left;
 	.flex-vert-center; // Mixin > Flexbox: Vertical Align Center Mixin
 
+    -webkit-flex: 1 1 40%;
+    -ms-flex: 1 1 40%;
+    flex: 1 1 40%;
+
 	// Spacing for mobile navigation
 	@media @tablet {
 		margin-bottom: 30px;
